k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tetris
  labels:
    app: tetris
    env: production
    managed-by: argocd
