k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris-service-nodeport
  namespace: tetris
  labels:
    app: tetris
spec:
  type: NodePort
  selector:
    app: tetris
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
