k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris-service
  namespace: tetris
  labels:
    app: tetris
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
spec:
  type: ClusterIP
  selector:
    app: tetris
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
